implentacion de la API paypal

--- a/index.html
+++ b/index.html
@@ -49,15 +49,7 @@ $(function(){
           <li><a href="about.html">about</a></li>
           <li> <a href="services.html">services</a>
             <ul>
-              <li><a href="#">Maecenas faucibus</a></li>
-              <li><a href="#">Fusce tincidunt</a></li>
-              <li> <a href="#">tempor eros</a>
-                <ul>
-                  <li><a href="#">ut viverra</a></li>
-                  <li><a href="#">hendrerit mauris</a></li>
-                </ul>
-              </li>
-              <li><a href="#">mauris ut du</a></li>
+              <li><a href="subs.html">Subscriptions</a></li>
             </ul>
           </li>
           <li><a href="links.html">links</a></li>
